--- a/medhub/jsconfig.json
+++ b/medhub/jsconfig.json
@@ -1,7 +1,12 @@
 {
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./*"]
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@components/*": ["components/*"],
+            "@styles/*": ["styles/*"],
+            "@utils/*": ["utils/*"],
+            "@public/*": ["public/*"],
+            "@AppComponents/*": ["components/App/*"]
+        }
     }
-  }
 }
